--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -27,6 +27,8 @@ href="https://cdn.jsdelivr.net/npm/semantic-ui@2/dist/semantic.min.css"
       name="description"
       content="Web site created using create-react-app"
     />
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -43,6 +45,10 @@ href="https://cdn.jsdelivr.net/npm/semantic-ui@2/dist/semantic.min.css"
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
 <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script>
+<script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
+<script>
+  lucide.createIcons()
+</script>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
